# Rust_learn

Euler/q_11/: Cargo.toml
Euler/q_13/: Cargo.toml
Euler/q_14/: Cargo.toml
Euler/q_15/: Cargo.toml
Euler/q_5/: Cargo.toml
Generic_try/: Cargo.toml
Generic_try/src/: main.rs
Ising/: Cargo.toml
Ising/src/: main.rs
Ising_parallel/: Cargo.toml
Ising_parallel/src/: main.rs
Lanzcos/: Cargo.toml
Lanzcos/src/: lib.rs
Plotters_try/: Cargo.toml
Plotters_try/src/: main.rs
Rustb/: Cargo.toml  KLABELS
Rustb/src/: .lib.rs.swp  lib.rs
SHC/MoS2/: Cargo.toml
SHC/Pt/: Cargo.toml  omega_klabel  print.py  wannier90.win  wannier90_centres.xyz
SHC/Pt_1/: Cargo.toml
Sudoku/src/: main.rs
adap_inte/: Cargo.toml
adap_inte/src/: main.rs
davidson/: Cargo.toml
davidson/src/: main.rs
eight_quene/: Cargo.toml
eight_quene/C_test/: a.out  test.cpp
eight_quene/src/: main.rs
fi_test/: Cargo.toml
fi_test/src/: main.rs
gen_prime/: Cargo.toml
gen_prime/src/: main.rs
gnuplot_try/: Cargo.toml
gnuplot_try/src/: main.rs
guessing_game/src/: main.rs
heatmap_try/: Cargo.toml
heatmap_try/src/: main.rs
hellow-rust/: Cargo.toml
judge_prime/: Cargo.toml
judge_prime/src/: main.rs
matrix_time/: Cargo.toml
matrix_time/src/: main.rs
n-body/src/: main.rs
open_read/: Cargo.toml  data.txt
open_read/src/: main.rs
par_try/: Cargo.toml
par_try/src/: main.rs
plotlib_try/: Cargo.toml
plotters_try/: Cargo.toml
read_hr/: Cargo.toml  wannier90.win  wannier90_centres.xyz
sprs_try/: Cargo.toml
test_try/: Cargo.toml
try_CG/: Cargo.toml
(+36 files in other folders)
