[package]
name = "Lanzcos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray={ version="*", features = ["rayon"] }
num-complex="*"
num-traits="*"
ndarray-linalg={version="*",features=["intel-mkl-static"]}
approx="*"
nalgebra-sparse="*"
